WIP: implement reading of traffic data

--- a/octi-map.html
+++ b/octi-map.html
@@ -10,6 +10,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
   <script src="Main.js"></script>
+  <script src="IO.js"></script>
 
 </head>
 <body onload="init()">
