--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,8 @@
         can be chosen individually
         in the list on the left. Additionally, the user can establish rules about the names of the lines which should be
         selected. The user
-        can choose how the names should start, should not start, should end and should not end. Multiple strings can be
+        can choose how the names should start, should not start, should end and should not end. Additionally, a certain type of
+        transport can be selected. Multiple strings can be
         separated by a comma.
         At the bottom, the user can choose if lines are allowed to cross each other in the graph and set the scale of
         the drawn graph.
