Added Link to github pages.

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 <body>
 <h1 style="text-align: center">Metro Maps on Octilinear Grid Graphs</h1>
 <h3 style="text-align: center">By Georg Schenzel 01633078 & Viktoria Pundy 01633403</h3>
-<div style="text-align: center"><a>This is a link to the project</a></div>
+<div style="text-align: center"><a href="https://vcpy.github.io/Octilinear_Maps/">Link to the Project on Github Pages</a></div>
 <div>This project is based on the paper <a href="https://diglib.eg.org/handle/10.1111/cgf13986">Metro Maps on Octilinear
     Grid Graphs</a> by Bast et al.
 </div>
